<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="28dp"
        android:paddingRight="28dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginTop="18dp"
            >

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                style="@style/InputTextLoginScreen"
                android:hint="@string/login_name"
                android:drawableRight="@drawable/ic_tag_faces_white"
                android:drawableEnd="@drawable/ic_tag_faces_white"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            >

            <EditText
                android:id="@+id/et_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                style="@style/InputTextLoginScreen"
                android:hint="@string/login_hint"
                android:drawableRight="@drawable/ic_person_outline_white"
                android:drawableEnd="@drawable/ic_person_outline_white"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/InputTextLoginScreen"
                android:hint="@string/password_hint"
                android:drawableRight="@drawable/ic_lock_outline_white"
                android:drawableEnd="@drawable/ic_lock_outline_white"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            >

            <EditText
                android:id="@+id/et_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/InputTextLoginScreen"
                android:hint="@string/confirm_password_hint"
                android:drawableRight="@drawable/ic_lock_outline_white"
                android:drawableEnd="@drawable/ic_lock_outline_white"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_adm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/switch_adm"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:switchPadding="20dp"
            android:layout_gravity="end"
            />

        <Button
            android:id="@+id/bt_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_signup_button"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="18dp"
            android:background="@color/colorAccent"
            />

    </LinearLayout>

</ScrollView>
