<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingLeft="28dp"
        android:paddingRight="28dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginTop="18dp"
            >

            <EditText
                android:id="@+id/et_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                style="@style/InputTextLoginScreen"
                android:hint="@string/login_hint"
                android:drawableRight="@drawable/ic_person_outline_white"
                android:drawableEnd="@drawable/ic_person_outline_white"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/InputTextLoginScreen"
                android:hint="@string/password_hint"
                android:drawableRight="@drawable/ic_lock_outline_white"
                android:drawableEnd="@drawable/ic_lock_outline_white"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_login"
            android:text="@string/text_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"/>

    </LinearLayout>

</ScrollView>